2009-12-18  Brian Weinstein  <bweinstein@apple.com>

        Reviewed by Adam Roben.
        
        Fixes <http://webkit.org/b/32613>.
        REGRESSION (r52008): Middle-clicking on a linked image starts a pan scroll,
        but should follow the link instead.

        Added tests that test pan scrolling behavior when you middle click on images with
        links, and if you click on parts on image maps that are links, and that aren't.

        * platform/win/fast/events/panScroll-image-no-scroll-expected.txt: Added.
        * platform/win/fast/events/panScroll-image-no-scroll.html: Added.
        * platform/win/fast/events/panScroll-imageMap-href-no-scroll-expected.txt: Added.
        * platform/win/fast/events/panScroll-imageMap-href-no-scroll.html: Added.
        * platform/win/fast/events/panScroll-imageMap-noHref-scroll-expected.txt: Added.
        * platform/win/fast/events/panScroll-imageMap-noHref-scroll.html: Added.

2009-12-18  Kenneth Russell  <kbr@google.com>

        Reviewed by Darin Fisher.

        Index validation for drawElements examines too many indices
        https://bugs.webkit.org/show_bug.cgi?id=32692

        * fast/canvas/webgl/bug-32692-expected.txt: Added.
        * fast/canvas/webgl/bug-32692.html: Added.

2009-12-18  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Rubber-stamped by Xan Lopez.

        Unskip test that should now pass.

        * platform/gtk/Skipped:

2009-12-18  Brian Weinstein  <bweinstein@apple.com>

        Rubber-stamped by Adam Roben.

        Add expected failing results for fast/dom/Element/id-in-deleteutton.html.
        The progress of fixing the failure is being tracked by:
        <https://bugs.webkit.org/show_bug.cgi?id=32727>.

        * platform/win/fast/dom/Element: Added.
        * platform/win/fast/dom/Element/id-in-deletebutton-expected.txt: Added.

2009-12-18  Shu Chang  <Chang.Shu@nokia.com>

        Reviewed by Darin Adler.

        New test cases for isId support.