@@ -1,0 +1,6 @@
+This test verifies that, on Windows, list markers return the non-editable "text" role. 
+
+
+list item
+PASS listMarker.role is "text"
+
