@@ -1,3 +1,15 @@
+2009-12-17  Jon Honeycutt  <jhoneycutt@apple.com>
+
+        MSAA: Accessibility role of list markers is wrong
+
+        https://bugs.webkit.org/show_bug.cgi?id=32687
+
+        Reviewed by Adam Roben.
+
+        * platform/win/accessibility/list-marker-role-expected.txt: Added.
+        * platform/win/accessibility/list-marker-role.html: Added.
+        Verify that the list marker role is "text".
+
 2009-12-18  Brian Weinstein  <bweinstein@apple.com>
 
         Reviewed by Adam Roben.
